--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Southern States -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: John March, Southerner
 url: http://www.gutenberg.org/ebooks/31470
